--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     Email: info@company.ru
                 </address>
             </section>
-script>
+<script>
         const menuLinks = document.querySelectorAll('.menu-link');
         menuLinks.forEach(link => {
             link.addEventListener('click', e => {
