--- a/newindex.html
+++ b/newindex.html
@@ -180,11 +180,11 @@
             newTestimonial.textContent = `${name}: ${text}`;
 
 
-            document.getElementById('testimonial-list').append(newTestimonial); // append используется
+            document.getElementById('testimonial-list').append(newTestimonial); 
 
             
             const testimonialsList = document.getElementById('testimonial-list');
-            const children = testimonialsList.childNodes; // children используется
+            const children = testimonialsList.childNodes; 
 
             
             children.forEach((child, index) => {
